fix: Stretching the img map when adaptive

--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -181,7 +181,8 @@
     position: absolute
     width: 100%
     height: 100%
-    overflow: hidden
+    object-fit: cover
+    object-position: left
 iframe
   position: absolute
   width: 100%
